--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+	<meta charset="UTF-8">
+	<title>jsClock-simple</title>
 	<link rel="stylesheet" href="./style.css">
 	<script src="./clock.js"></script>
 </head>
