Renamed to "digital clock"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>jsClock-simple</title>
+	<title>digital clock</title>
 	<link rel="stylesheet" href="./style.css">
 	<script src="./clock.js"></script>
 </head>
